// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatCard Component Snapshot Testleri minimal props ile snapshot eşleşmeli 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 p-6 hover:shadow-md transition-shadow"
>
  <div
    class="flex items-start justify-between"
  >
    <div
      class="flex-1"
    >
      <p
        class="text-sm font-medium text-gray-600 mb-1"
      >
        Test
      </p>
      <p
        class="text-3xl font-bold text-gray-900 mb-2"
      >
        100
      </p>
    </div>
    <div
      class="p-3 rounded-lg bg-blue-100 text-blue-600"
    >
      <svg
        class="lucide lucide-package"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.5 9.4 7.55 4.24"
        />
        <path
          d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"
        />
        <polyline
          points="3.29 7 12 12 20.71 7"
        />
        <line
          x1="12"
          x2="12"
          y1="22"
          y2="12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`StatCard Component Snapshot Testleri tüm props ile snapshot eşleşmeli 1`] = `
<div
  class="bg-white rounded-lg border border-gray-200 p-6 hover:shadow-md transition-shadow"
>
  <div
    class="flex items-start justify-between"
  >
    <div
      class="flex-1"
    >
      <p
        class="text-sm font-medium text-gray-600 mb-1"
      >
        Toplam Satış
      </p>
      <p
        class="text-3xl font-bold text-gray-900 mb-2"
      >
        ₺125,000
      </p>
      <p
        class="text-sm text-gray-500"
      >
        Bu ay
      </p>
      <div
        class="flex items-center gap-1 mt-2"
      >
        <span
          class="text-sm font-medium text-green-600"
        >
          ↑
           
          15.5
          %
        </span>
        <span
          class="text-sm text-gray-500"
        >
          son aya göre
        </span>
      </div>
    </div>
    <div
      class="p-3 rounded-lg bg-green-100 text-green-600"
    >
      <svg
        class="lucide lucide-dollar-sign"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="12"
          x2="12"
          y1="2"
          y2="22"
        />
        <path
          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
        />
      </svg>
    </div>
  </div>
</div>
`;
